# purefunctor.me-2022

./: .gitignore  .stylish-haskell.yaml  .vercelignore  .yarnrc  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  build.js  bundle.js  cabal.project  cabal.project.freeze  config-default.toml  config.nix  config.toml  default.nix  docker-backend.nix  docker-compose.yml  docker-frontend.nix  docker.nix  hie-stack.yaml  hie.yaml  nginx.conf  package-lock.json  package.json  packages.dhall  pnpm-lock.yaml  project.nix  purefunctor-me.cabal  release-frontend.nix  release-static.nix  release.nix  shell.nix  spago-packages.nix  spago.dhall  tailwind.config.js  wrangler.toml
.github/workflows/: ci.yml  nix.yml  preview.yml  production.yml  publish.yml  release.yaml  test.yml
api/: og-img.js  repo.js
assets/css/: fonts.css
assets/dev/: index.html  index.js
assets/prod/: index.html
assets/scss/: core.scss  extra.scss  index.scss
assets/scss/component/: navbar.scss
assets/scss/pages/: about.scss  contact.scss  home.scss
content/posts/: 20220228083102-free_and_cofree.md  an-introduction.md
dev/: index.html
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  Dockerfile.base  Dockerfile.prod  nginx.conf
html/pages/: index.html
html/templates/: base.html  navbar.html
nix/: monad-logger.nix  password.nix  purefunctor-me.nix  servant-server.nix  servant.nix  sources.json  text.nix  time.nix  truths.nix  warp.nix  yesod.nix
pf-backend/: Dockerfile  LICENSE  config-default.toml  docker.nix  migration.sql  purefunctor-me.cabal  release.nix
pf-backend/src/Website/: API.hs  App.hs  Config.hs  Database.hs  Debug.hs  Models.hs  PseudoSSR.hs  Server.hs  Tasks.hs  Types.hs
pf-backend/src/Website/API/: Auth.hs  Blog.hs  Common.hs  Repo.hs
pf-backend/src/Website/Database/: Models.hs  Pool.hs
pf-backend/src/Website/Database/Models/: BlogPost.hs  Repository.hs
pf-backend/src/Website/PseudoSSR/: Inject.hs  Routes.hs  Static.hs  Types.hs
pf-backend/src/Website/Server/: API.hs  Extra.hs  PseudoSSR.hs
pf-backend/src/Website/Server/API/: Auth.hs  Blog.hs  Common.hs  Repo.hs
pf-backend/src/Website/Server/PseudoSSR/: Inject.hs  Static.hs  Types.hs
pf-backend/test/: Test.hs
pf-backend/test/Test/: Blog.hs  Data.hs  Repo.hs  Utils.hs
pf-frontend/: Dockerfile  package.json  spago.dhall  tailwind.config.js
pf-frontend/dev/: index.html
pf-frontend/prod/: index.js
pf-frontend/src/: Env.purs
pf-frontend/src/Component/: Router.purs  Utils.purs
pf-frontend/src/Data/: PreciseDateTime.purs  Resources.purs
pf-frontend/src/Pages/: Admin.purs  Home.purs  NotFound.purs
pf-frontend/src/Pages/Home/: AboutCard.purs  ContactCards.purs  ProjectCards.purs
pf-frontend/src/Utils/: Cookies.purs
pf_app/css/: extra.css  fonts.css  garage.css  rotate.css  tailwind.css
pf_app/dev/: index.html
pf_app/prod/: index.html
pf_app/src/: AppM.purs  Main.purs
pf_app/src/API/: Endpoint.purs  Request.purs
pf_app/src/Capability/: Navigation.purs  Resources.purs
pf_app/src/Component/: AboutCard.purs  ContactCards.purs  ProjectCards.purs  RepoCard.purs  Router.purs  Utils.purs
pf_app/src/Data/: PreciseDateTime.purs  Resources.purs  Routes.purs
pf_app/src/Pages/: About.purs  Admin.purs  Home.purs  NotFound.purs
pf_app/src/Pages/Home/: ContactCards.purs  ProjectCards.purs
pf_app/src/Utils/: Cookies.js  Cookies.purs
pf_site/app/: Main.hs
pf_site/src/Website/: API.hs  App.hs  Config.hs  Debug.hs  Models.hs  Tasks.hs  Utils.hs  WebsiteM.hs
pf_site/src/Website/API/: Auth.hs  Blog.hs  Common.hs  Repo.hs
pf_site/test/: Test.hs
pf_site/test/Test/: Auth.hs  Blog.hs  Data.hs  Repo.hs  Utils.hs
public/: index.html
scss/: breakpoints.scss  colors.scss  core.scss  fonts.scss  index.scss
scss/components/: navbar.scss
scss/pages/: about.scss  home.scss  null.scss
site/: README.md
site/.vuepress/: clientAppEnhance.js  config.js
site/.vuepress/components/: Project.vue
site/.vuepress/styles/: index.scss
site/blog/: README.md
site/projects/: README.md
src/: AppM.purs  Main.purs  Store.purs  index.js
src/API/: Request.purs
src/Capability/: Navigation.purs  OpenUrl.purs
src/Component/: Navbar.purs  Router.purs  Utils.purs
src/Component/HTML/: Navbar.purs  ProfilePicture.purs
src/Data/: Resources.purs  Routes.purs
src/Pages/: About.purs  Contact.purs  Home.purs  NotFound.purs  Projects.purs
src/Pages/Home/: AboutCard.purs  ContactCards.purs  ProjectCards.purs
worker/: _index.js  package.json  pnpm-lock.yaml
