cabal-version:       2.4

name:                purefunctor-me
version:             1.0.0.0
synopsis:            My personal portfolio website written in PureScript and Haskell.
description:         My personal portfolio website written in PureScript and Haskell.
homepage:            https://github.com/PureFunctor/purefunctor.me
bug-reports:         https://github.com/PureFunctor/purefunctor.me/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              PureFunctor
maintainer:          purefunctor@gmail.com
copyright:           (c) 2020, PureFunctor
category:            Web
extra-source-files:  CHANGELOG.md, README.md
data-files:          config-default.toml

library
  exposed-modules:     Website.App,
                       Website.API,
                       Website.API.Auth,
                       Website.API.Common,
                       Website.API.Blog,
                       Website.API.Repo,
                       Website.Config,
                       Website.Debug,
                       Website.Models,
                       Website.PseudoSSR,
                       Website.PseudoSSR.Inject,
                       Website.PseudoSSR.Static,
                       Website.PseudoSSR.Types,
                       Website.Tasks,
                       Website.Types

  other-modules:       Paths_purefunctor_me

  default-extensions:  DataKinds,
                       DeriveAnyClass,
                       DeriveGeneric,
                       DerivingStrategies,
                       DuplicateRecordFields,
                       FlexibleInstances,
                       FunctionalDependencies,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       QuasiQuotes,
                       RecordWildCards
                       StandaloneDeriving,
                       TemplateHaskell,
                       TypeFamilies,
                       TypeOperators,
                       UndecidableInstances

  build-depends:       base ^>=4.14.1.0,
                       aeson,
                       async,
                       bytestring,
                       cron,
                       http-media,
                       jose,
                       lens,
                       monad-logger,
                       mtl,
                       password,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       req,
                       servant,
                       servant-server,
                       servant-auth,
                       servant-auth-server,
                       tagsoup,
                       text,
                       time,
                       tomland,
                       transformers,
                       wai,
                       wai-middleware-static,
                       warp,

  ghc-options:         -Wunused-imports
                       -Wunused-matches
                       -Wname-shadowing

  hs-source-dirs:      src
  default-language:    Haskell2010

executable purefunctor-me
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0, purefunctor-me
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite purefunctor-me-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test.Auth,
                       Test.Blog,
                       Test.Data,
                       Test.Repo,
                       Test.Utils
  build-depends:       base ^>=4.14.1.0,
                       hspec,
                       hspec-wai,
                       aeson,
                       bytestring,
                       cookie,
                       http-types,
                       lens,
                       persistent,
                       persistent-sqlite,
                       text,
                       time,
                       wai,
                       wai-extra,
                       purefunctor-me,

  ghc-options:         -Wunused-imports
                       -Wunused-matches
                       -Wname-shadowing
