cabal-version:       2.4

name:                purefunctor-me
version:             1.0.0.0
synopsis:            My personal portfolio website written in PureScript and Haskell.
description:         My personal portfolio website written in PureScript and Haskell.
homepage:            https://github.com/PureFunctor/purefunctor.me
bug-reports:         https://github.com/PureFunctor/purefunctor.me/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              PureFunctor
maintainer:          purefunctor@gmail.com
copyright:           (c) 2020, PureFunctor
category:            Web
data-files:          config-default.toml,
                     migration.sql

library
  exposed-modules:     Website.App,
                       Website.Config,
                       Website.Database,
                       Website.Database.Models,
                       Website.Database.Models.BlogPost,
                       Website.Database.Models.Repository,
                       Website.Database.Pool,
                       Website.Debug,
                       Website.Server,
                       Website.Server.API,
                       Website.Server.API.Auth,
                       Website.Server.API.Common,
                       Website.Server.API.Blog,
                       Website.Server.API.Repo,
                       Website.Server.Extra,
                       Website.Server.PseudoSSR,
                       Website.Server.PseudoSSR.Inject,
                       Website.Server.PseudoSSR.Static,
                       Website.Server.PseudoSSR.Types,
                       Website.Tasks,
                       Website.Types

  other-modules:       Paths_purefunctor_me

  default-extensions:  DataKinds,
                       DeriveAnyClass,
                       DeriveGeneric,
                       DerivingStrategies,
                       DuplicateRecordFields,
                       FlexibleInstances,
                       FunctionalDependencies,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       OverloadedStrings,
                       QuasiQuotes,
                       RecordWildCards
                       StandaloneDeriving,
                       TemplateHaskell,
                       TypeFamilies,
                       TypeOperators,
                       UndecidableInstances

  build-depends:       base ^>=4.14.1.0,
                       aeson,
                       async,
                       beam-core,
                       beam-sqlite,
                       bytestring,
                       containers,
                       cron,
                       http-media,
                       http-types,
                       jose,
                       lens,
                       monad-logger,
                       microlens,
                       mtl,
                       req,
                       resource-pool,
                       servant,
                       servant-server,
                       servant-auth,
                       servant-auth-server,
                       sqlite-simple,
                       tagsoup,
                       text,
                       time,
                       tomland,
                       transformers,
                       wai,
                       wai-middleware-static,
                       warp,

  ghc-options:         -Wunused-imports
                       -Wunused-matches
                       -Wname-shadowing

  hs-source-dirs:      src
  default-language:    Haskell2010

executable purefunctor-me
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0, purefunctor-me
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wunused-imports
                       -Wunused-matches
                       -Wname-shadowing
                       -threaded

test-suite purefunctor-me-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test.Auth,
                       Test.Blog,
                       Test.Data,
                       Test.Repo,
                       Test.Utils
  build-depends:       base ^>=4.14.1.0,
                       hspec,
                       hspec-wai,
                       aeson,
                       bytestring,
                       cookie,
                       http-types,
                       lens,
                       persistent,
                       persistent-sqlite,
                       text,
                       time,
                       wai,
                       wai-extra,
                       purefunctor-me,

  ghc-options:         -Wunused-imports
                       -Wunused-matches
                       -Wname-shadowing
